--- a/turbo/generators/templates/create-package/vitest.config.js.hbs
+++ b/turbo/generators/templates/create-package/vitest.config.js.hbs
@@ -3,7 +3,7 @@ import { createRequire } from 'node:module'
 import sharedConfig, { defineConfig, mergeConfig } from '@toolchain/vitest-config'
 
 const require = createRequire(import.meta.url)
-const packageJson = require('./package.json.hbs')
+const packageJson = require('./package.json')
 
 export default mergeConfig(
   sharedConfig,
