feat(monorepo): update turbo gen create-package template
update eslint.config.js.hbs to latest setup

--- a/turbo/generators/templates/create-package/eslint.config.js.hbs
+++ b/turbo/generators/templates/create-package/eslint.config.js.hbs
@@ -1,1 +1,12 @@
-export { default } from '@toolchain/eslint-config/profile/node'
+import config from '@toolchain/eslint-config/profile/node'
+
+export default [
+  ...config,
+  {
+    languageOptions: {
+      parserOptions: {
+        tsconfigRootDir: import.meta.dirname,
+      },
+    },
+  },
+]
