fix(packages/ui-lib-svelte): update @source path in styles/index.css
Had the wrong path to lib folder

--- a/packages/ui-lib-svelte/src/styles/index.css
+++ b/packages/ui-lib-svelte/src/styles/index.css
@@ -2,7 +2,7 @@
 
 @import 'tw-animate-css';
 
-@source "./lib/**/*.{ts,svelte}";
+@source "../lib/**/*.{ts,svelte}";
 
 @custom-variant dark (&:is(.dark *));
 
