feat(packages/ui-lib-svelte): add `@tailwindcss/forms` plugin

--- a/packages/ui-lib-svelte/src/styles/index.css
+++ b/packages/ui-lib-svelte/src/styles/index.css
@@ -2,6 +2,8 @@
 
 @import 'tw-animate-css';
 
+@plugin "@tailwindcss/forms";
+
 @source "../lib/**/*.{ts,svelte}";
 
 @custom-variant dark (&:is(.dark *));
